syntax = "proto3";

option csharp_namespace = "homectl.Protocol";

package homectl;

service WhatsMyIpAddress {
	rpc GetIpAddress (IpAddressRequest) returns (IpAddressResponse);
}

message IpAddressRequest {
}

message IpAddressResponse {
	string ipAddress = 1;
}